--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
-    "nodemon": "^2.0.16",
-    "yarn": "^1.22.18"
+    "nodemon": "^2.0.16"
   }
 }
